# AeroSense-Safety-Critical-AI-Test-Automation-Framework

./: .env.example  .env.local.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  TROUBLESHOOTING.md  alembic.ini  docker-compose.yml  openapi.json  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
alembic/: env.py
docs/: API_RATE_LIMITS.md  CONFIG_VALIDATION_CHECKLIST.md  COST_ESTIMATION.md  DEPENDENCY_PINNING.md  DEVELOPMENT_PREREQUISITES.md  DISASTER_RECOVERY.md  GITHUB_ACTIONS_SETUP.md  INCIDENT_ESCALATION.md  LOCAL_TESTING_CHECKLIST.md  MIGRATION_ROLLBACK.md  PERFORMANCE_BASELINE.md  PERFORMANCE_TUNING.md  PGBOUNCER_CONFIG.md  POSTMORTEM_TEMPLATE.md  RELEASE_PROCESS.md  RUNBOOKS.md  SLO_TRACKING.md  UPGRADE_GUIDE.md
examples/: hitl-requests.sh  sample_srs.md
helm/: Chart.yaml  values-dev.yaml  values-prod.yaml  values-staging.yaml  values.yaml
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  postgres.yaml  prometheus.yml  service.yaml
load-tests/: benchmarks.json  cost-analysis.py  endpoints.js  profile.py
monitoring/: grafana-dashboard.json  prometheus-alerts.yml
scripts/: backup-postgres.sh  health-check.sh  port-forward.sh  setup.sh
src/: config.py  logging_config.py  main.py  startup.py  telemetry.py
tests/: test_audit_logger.py  test_audit_logger_postgres.py  test_audit_logger_postgres_unit.py  test_cicd_pipeline.py  test_config_unit.py  test_deployment_config.py  test_documentation.py  test_hitl_ui.py  (+16 more)
(+30 files in other folders)
