[project]
name = "aerosense-testforge"
version = "0.1.0"
description = "Safety-Critical AI Test Automation Framework (DO-178C adapted)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "pydantic>=2.0",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
markers = [
    "requirement: tags a test with a DO-178C requirement ID (REQ-XXX)",
]

[tool.coverage.report]
fail_under = 90
